{
    "version": 1,
    "name": "InptutControl",
    "maps": [
        {
            "name": "keyboard",
            "id": "2621f83d-5378-4ce5-a0b5-6b5e9393dbf6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "bb37c954-f3be-432d-a819-79b4c5719d62",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attk",
                    "type": "Button",
                    "id": "dfde1349-5d80-4573-8514-6073f290f590",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GameChoose",
                    "type": "Button",
                    "id": "c1bb27ea-b32f-4e45-aa43-0374e290759b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GameStart",
                    "type": "Button",
                    "id": "4e2fa284-008b-42c3-bff0-257078ad684c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "console",
                    "type": "Button",
                    "id": "d3ad6768-2913-438e-a3ab-e47cfe10e6b4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GameRest",
                    "type": "Button",
                    "id": "56396186-a8b4-4d20-b7e9-be7c49273bf6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "level1",
                    "type": "Button",
                    "id": "35312295-e660-4a28-bbd2-4c37edbe4fc4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "level2",
                    "type": "Button",
                    "id": "b6a167ac-eea7-4cd7-8bc7-b156530c88b9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "level3",
                    "type": "Button",
                    "id": "e413faa8-4b74-469c-80b5-d80cd6ab9002",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "level4",
                    "type": "Button",
                    "id": "fc171fe1-ddba-4df0-a64a-78b06d27a583",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "level5",
                    "type": "Button",
                    "id": "430ed7fe-42a2-401f-8c0a-35673a741fa5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "level6",
                    "type": "Button",
                    "id": "be0d48a3-a836-45a0-af86-e2378f8926ef",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "level7",
                    "type": "Button",
                    "id": "024f955d-02c9-4a92-b492-c942713984a5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "54a27b7d-dcb3-4f1b-af05-2e9da6a2d017",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "03ea82c6-77c0-405c-8c36-82419bf680b2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c44dbdef-f4c8-4346-af61-5a0a0335dc90",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a30a8d27-365a-4620-b694-3f02173fb541",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95a8414c-30f4-43ba-8c6d-947c9c7e01ba",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0f6125a-51c7-49de-9f5c-7629c706018b",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b91fa61-3a91-48db-8062-23666e54b70d",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9c95538-5f5f-485c-af2b-93202535bab4",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GameChoose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd62f055-59fb-4775-85a1-8637e3e2ee16",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GameStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d992add-e55b-4c72-92c4-bff57ba951ab",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "console",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "534a04d9-651f-457d-aebc-38856742ba50",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GameRest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "level1",
                    "id": "b11b199b-ae15-4278-b8e8-6b62aba08d1f",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "9e8d8a26-4a6f-4cdc-a06f-90e0535e6535",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "9252af7f-344a-43d6-b5aa-d36efd7698c5",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "d672f87d-7f50-4b78-9a65-35ecddd943aa",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "df6e882c-f3d8-4d24-8bab-456eea9265c9",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "ea90217c-4393-4529-b66b-c8e391dc4d50",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "b9852246-06db-4a23-bf70-561d83f2d29f",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level3",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "f8b11edb-f969-4f2a-a941-ed02a6e3d2cb",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "f875946d-51e5-4aeb-9608-bc6c1901778e",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level3",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "d81766cf-e5a6-490a-8bfe-d095e9d81000",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level4",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "8bfd9d79-60fa-4da4-895a-e5620f079753",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level4",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "f8a100f3-b1ae-4719-865f-e0aa945269e7",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level4",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "3b402768-fe72-42d2-a47a-5b7751a92043",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level5",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "7e603059-3f84-47c8-a69c-24dc4a0797ca",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level5",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "2eb3803c-aaef-4544-8ea5-efd483c682c2",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level5",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "1b84963e-b3c4-4177-bb57-0f14edca9e77",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level6",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "a4a9f38e-58a1-404f-ba20-0ef3c1004bcd",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level6",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "9230fe1f-ebfa-438e-9aeb-2e64484e3615",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level6",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "168c847c-a122-4d2f-9cd1-5ee70246d5b3",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level7",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "5651d566-4cf7-4a7d-8879-73c6e3e5e903",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level7",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "64932028-9ab0-4280-9717-344c81b65304",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "level7",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}